--- a/public/index.html
+++ b/public/index.html
@@ -35,7 +35,7 @@
       rel="stylesheet"
       href="../src/components/ProfileHome/ProfileHome.css"
     /> -->
-    <title>Store Resume</title>
+    <title>Lolix</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
